Реализован функционал, изменена документация

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -167,7 +167,7 @@
 
 	<template id="card-catalog">
 		<button class="gallery__item card">
-			<span class="card__category card__category_soft">софт-скил</span>
+			<span class="card__category">софт-скил</span>
 			<h2 class="card__title">+1 час в сутках</h2>
 			<img class="card__image" src="<%=require('../images/Subtract.svg')%>" alt="" />
 			<span class="card__price">750 синапсов</span>
@@ -203,7 +203,7 @@
 			<h2 class="modal__title">Корзина</h2>
 			<ul class="basket__list"></ul>
 			<div class="modal__actions">
-				<button class="button basket__button">Оформить</button>
+				<button disabled class="button basket__button">Оформить</button>
 				<span class="basket__price">0 синапсов</span>
 			</div>
 		</div>
